--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.x
+        python-version: '3.x'
 
     - name: Install dependencies
       run: python -m pip install requests beautifulsoup4
@@ -33,3 +33,5 @@ jobs:
         git add data.json
         git commit -m 'Update bed availability data'
         git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
