--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -22,6 +22,8 @@ jobs:
 
     - name: Install dependencies
       run: python -m pip install requests beautifulsoup4
+      run: pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client beautifulsoup4 requests
+
 
     - name: Run scraper
       run: python scraper.py
