--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -21,10 +21,9 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: 
-        python -m pip install requests beautifulsoup4
-        python pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client beautifulsoup4 requests
-
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests beautifulsoup4 google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
 
     - name: Run scraper
       run: python scraper.py
@@ -33,7 +32,7 @@ jobs:
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add data.json
+        git add data.json change_log.json
         git commit -m 'Update bed availability data'
         git push
       env:
