--- a/.github/workflows/scrapv2.yml
+++ b/.github/workflows/scrapv2.yml
@@ -27,9 +27,9 @@ jobs:
 
     - name: Run scraper
       run: |
-        python scraper.py
+        python Beds.py
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add bed_data.csv
+        git add bed_data_combined.csv
         git commit -m 'Update bed data'
         git push
