--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,8 +1,8 @@
-name: Scrape Bed Availability
+name: Scrape Bed Data
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Every 6 hours
+    - cron: '0 */6 * * *'
   push:
     branches:
       - main
@@ -13,27 +13,23 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: '3.x'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
+        pip install requests beautifulsoup4 pandas
 
     - name: Run scraper
-      run: python scraper.py
-
-    - name: Commit results
       run: |
+        python Beds.py
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add data.json change_log.json
-        git commit -m 'Update bed availability data'
+        git add bed_data_combined.csv
+        git commit -m 'Update bed data'
         git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
