--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         python Beds.py
         git config --global user.name 'github-actions'
-        git add bed_data_combined.csv
+        git config --global user.email 'github-actions@github.com'
+        git add bed_data.csv
         git commit -m 'Update bed data'
         git push
