--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: "0 */6 * * *"  # This runs the workflow every 6 hours
   workflow_dispatch:       # Allows manual triggering of the workflow
+  push:
+    branches:
+      - main  # Runs the workflow when changes are pushed to the main branch
 
 jobs:
   run-scraper:
