--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add bed_data.csv || echo "No changes to add"
+        git add ./scraper/bed_data.csv || echo "No changes to add"
         git commit -m 'Update bed data' || echo "No changes to commit"
         git push || echo "No changes to push"
       env:
