--- a/.github/workflows/check_bed_data_changes.yml
+++ b/.github/workflows/check_bed_data_changes.yml
@@ -41,11 +41,11 @@ jobs:
           file_path = 'scraper/bed_data.csv'
           previous_file_path = 'scraper/bed_data_previous.csv'
 
-          # List of specific locations to check
+          # Adjusted list of specific locations to check
           locations_to_check = [
-              'Cygnet Hospital Bury (PDU)',
-              'Cygnet Hospital Clifton (PDU)',
-              'Gledholt Mews and Coach House (PDU)'
+              'Cygnet Hospital Bury',
+              'Cygnet Hospital Clifton',
+              'Gledholt Mews and Coach House'
           ]
 
           # Function to send email notification
@@ -77,24 +77,62 @@ jobs:
                   print(f"Failed to send email: {e}")
 
           # Load current day's data
-          current_data = pd.read_csv(file_path)
+          print("Loading current day's data...")
+          try:
+              current_data = pd.read_csv(file_path)
+              print("Current data loaded successfully.")
+              print(current_data.head())
+          except Exception as e:
+              print(f"Failed to load current data: {e}")
+              exit(1)
 
           # Check if there is a previous day's data
           if os.path.exists(previous_file_path):
-              previous_data = pd.read_csv(previous_file_path)
-              merged_data = pd.merge(current_data, previous_data, on='Location', suffixes=('_current', '_previous'))
+              print("Loading previous day's data...")
+              try:
+                  previous_data = pd.read_csv(previous_file_path)
+                  print("Previous data loaded successfully.")
+                  print(previous_data.head())
+              except Exception as e:
+                  print(f"Failed to load previous data: {e}")
+                  exit(1)
+
+              # Merge and compare
+              print("Merging current and previous data...")
+              try:
+                  merged_data = pd.merge(current_data, previous_data, on='Location', suffixes=('_current', '_previous'))
+                  print("Data merged successfully.")
+                  print(merged_data.head())
+              except Exception as e:
+                  print(f"Failed to merge data: {e}")
+                  exit(1)
+
               changes_detected = []
 
+              # Iterate over the specific locations of interest
               for location in locations_to_check:
-                  location_data = merged_data[merged_data['Location'] == location]
+                  location_data = merged_data[merged_data['Location'].str.contains(location)]
                   if not location_data.empty:
+                      print(f"Checking changes for {location}...")
                       if not location_data.iloc[:, 1:].equals(location_data.iloc[:, len(current_data.columns[1:]):]):
+                          print(f"Changes detected for {location}.")
                           changes_detected.append(location)
 
               if changes_detected:
                   changes_message = "\n".join(changes_detected)
+                  print("Changes detected. Sending email notification...")
                   send_email_notification(changes_message)
+              else:
+                  print("No changes detected.")
+
+          else:
+              print("Previous day's data not found. Saving current data as previous for future runs.")
 
           # Save the current data as previous data for the next run
-          current_data.to_csv(previous_file_path, index=False)
+          try:
+              current_data.to_csv(previous_file_path, index=False)
+              print("Current data saved as previous data for the next run.")
+          except Exception as e:
+              print(f"Failed to save current data as previous: {e}")
+              exit(1)
           EOF
