--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
+        pip install requests beautifulsoup4 discord.py
 
     - name: Run scraper
       run: python ./scraper/scrape_beds.py
@@ -38,3 +38,10 @@ jobs:
         git push || echo "No changes to push"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Run Discord Bot
+      env:
+        DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}  # Bot token stored in GitHub Secrets
+        USER_ID: ${{ secrets.USER_ID }}  # Your Discord user ID stored in GitHub Secrets
+      run: |
+        python ./bot_script.py  # This is the script that sends DMs when data changes
