--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -4,9 +4,6 @@ on:
   schedule:
     - cron: "0 10 * * *"  # This runs the workflow every day at 10 AM
   workflow_dispatch:       # Allows manual triggering of the workflow
-  # push:
-    # branches:
-    #   - main  # Runs the workflow when changes are pushed to the main branch
 
 jobs:
   run-scraper:
@@ -44,4 +41,4 @@ jobs:
         DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}  # Bot token stored in GitHub Secrets
         USER_ID: ${{ secrets.USER_ID }}  # Your Discord user ID stored in GitHub Secrets
       run: |
-        python ./bot_script.py  # This is the script that sends DMs when data changes
+        python ./bot/bot_script.py  # Correct path to bot_script.py
