--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -41,4 +41,4 @@ jobs:
         DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}  # Bot token stored in GitHub Secrets
         USER_ID: ${{ secrets.USER_ID }}  # Your Discord user ID stored in GitHub Secrets
       run: |
-        python ./bot/bot_script.py  # Correct path to bot_script.py
+        python ./scraper/bot_script.py  # Correct path to bot_script.py
