--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 discord.py
+        pip install requests beautifulsoup4 discord.py pandas
 
     - name: Run scraper
       run: python ./scraper/scrape_beds.py
