--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -1,44 +1,42 @@
-name: Bed Scraper Ran at 10am
+name: Daily Bed Availability Scraper
 
 on:
   schedule:
-    - cron: "0 10 * * *"  # This runs the workflow every day at 10 AM
-  workflow_dispatch:       # Allows manual triggering of the workflow
+    - cron: '0 10 * * *'  # Every day at 10:00 UTC
+  workflow_dispatch:      # Manual trigger
 
 jobs:
-  run-scraper:
+  scrape_and_notify:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 discord.py pandas
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python -m playwright install --with-deps
 
-    - name: Run scraper
-      run: python ./scraper/scrape_beds.py
+      - name: Run scraper (Playwright)
+        run: python scrape_beds.py
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'github-actions@github.com'
-        git add ./scraper/bed_data.csv || echo "No changes to add"
-        git commit -m 'Update bed data' || echo "No changes to commit"
-        git push || echo "No changes to push"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Run Discord bot
+      #   env:
+      #     DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+      #     USER_ID: ${{ secrets.USER_ID }}
+      #   run: python bot_script.py
 
-    # - name: Run Discord Bot
-    #   env:
-    #     DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}  # Bot token stored in GitHub Secrets
-    #     USER_ID: ${{ secrets.USER_ID }}  # Your Discord user ID stored in GitHub Secrets
-    #   run: |
-    #     python ./scraper/bot_script.py  # Ensure this path matches the location of bot_script.py
+      - name: Commit updated data (if changed)
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add bed_data.csv previous_bed_data.csv || true
+          git commit -m "Daily update of bed data" || echo "No changes to commit"
+          git push || echo "No changes to push"
