--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -23,9 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m playwright install --with-deps
-
+          
       - name: Run scraper (Playwright)
-        run: python /scraper/scrape_beds.py
+        run: python scraper/scrape_beds.py
 
       # - name: Run Discord bot
       #   env:
