--- a/.github/workflows/scrape_beds.yml
+++ b/.github/workflows/scrape_beds.yml
@@ -37,6 +37,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git add scraper/bed_data.csv scraper/previous_bed_data.csv || true
+          git add -A
           git commit -m "Daily update of bed data" || echo "No changes to commit"
           git push || echo "No changes to push"
